adding some usefule fields to transaction response and account response
